[gd_scene load_steps=5 format=3 uid="uid://carpsgawwj4k7"]

[ext_resource type="Script" uid="uid://bf7t7ha08ejaj" path="res://objects/key/script_object_key.gd" id="1_a1ux4"]
[ext_resource type="Texture2D" uid="uid://bap8ovqeqedc6" path="res://objects/key/key.png" id="2_a1ux4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_386a8"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1ux4"]
size = Vector2(12, 14)

[node name="charbody_key_root" type="CharacterBody2D" groups=["grabbable", "key"]]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_a1ux4")

[node name="spr2D_sprite" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_a1ux4")

[node name="area2D_overlap" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_layer = 12
collision_mask = 32

[node name="colshape_overlap" type="CollisionShape2D" parent="area2D_overlap"]
shape = SubResource("RectangleShape2D_386a8")
debug_color = Color(0.952477, 8.66354e-07, 0.558445, 0.42)

[node name="colshape_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_a1ux4")

[connection signal="body_entered" from="area2D_overlap" to="." method="_onBodyEntered"]
